fix overflow issue

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,7 +1,6 @@
 body {
   text-align: center;
   background-color: rgb(226, 226, 220);
-  
 }
 
 button {
@@ -27,9 +26,9 @@ ul {
 }
  */
 /* form validation */
-textarea:invalid[focused="true"] ~ span {
+/* textarea:invalid[focused="true"] ~ span {
   display: block;
-}
+} */
 
 nav {
   /* display: block; */
@@ -82,32 +81,35 @@ form h3 {
   max-width: 250px;
 }
 
-.log-area{
-  min-height: 70vh;
+.chat-page {
+  /* height: 100%; */
 }
 
-.chat-box{
+.log-area {
+  min-height: 75vh;
+  max-height: 75vh;
+  overflow: auto;
+}
+
+.chat-box {
   background-color: blanchedalmond;
   margin: 2% 5% 2% 5%;
   padding: 2% 5% 2% 5%;
-
   border-radius: 15px;
   text-align: left;
 }
 
-.chat-log{
+.chat-log {
   margin: 2% 5% 2% 5%;
   display: flex;
   position: sticky;
-  bottom:0;
 }
 
-.fa-solid{
+.fa-solid {
   size: 40px;
   margin-right: 2%;
-
 }
 
-.chatbot-input-button{
-  margin:1%;
+.chatbot-input-button {
+  margin: 1%;
 }
